# eecs376

./: README.md
alarms/: CMakeLists.txt  package.xml  package.xml~
alarms/src/: estop_alarm_node.cc  laser_alarm_node.cc  laser_alarm_node.cc~
alarms/src/core/: laser_parser.cc  laser_parser.cc~
alarms/test/: laser_parser_unit.cc  main.cc
custom_msgs/action/: path.action
hw_msgs/: CMakeLists.txt  package.xml  package.xml~
hw_msgs/srv/: path.srv
hws/ps1/: CMakeLists.txt  package.xml
hws/ps2/: CMakeLists.txt  package.xml  writeup.odt
hws/ps2/src/: movement_commands.cc  reactive_commander.cc
hws/ps2/test/: get_scan_params_unit.cc
hws/ps3/: CMakeLists.txt  ReadMe.txt  package.xml  writeup.odt
hws/ps3/include/eecs376_ps3/: PathExecutor.h  movement_commands.h
hws/ps3/src/: PathExecutor.cc  movement_commands.cc  path_client.cc  path_service.cc  waypoint_generator.cc
hws/ps4/: CMakeLists.txt  package.xml  writeup.odt
hws/ps4/include/eecs376_ps4/: ActionServer.h~  PathExecutor.h
hws/ps4/src/: ActionServer.cc  ActionServer.cc~  PathExecutor.cc  action_client_node.cc  action_client_node.cc~  action_server_node.cc  lidar_parser.cc~
hws/ps5/: odom_poses.txt
hws/ps6/: CMakeLists.txt  package.xml  package.xml~  writeup.odt
hws/ps6/src/: pub_des_state_ps6_path_client.cpp  pub_des_state_ps6_path_client.cpp~
hws/ps7/: package.xml  package.xml~  writeup.odt
hws/ps7/src/: pub_des_state_ps7_path_client.cc
hws/ps8/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
hws/ps8/launch/: launch_gazebo.launch  launch_map_amcl.launch  launch_world.launch
hws/ps8/src/: pub_des_state_move_backwards_client.cc  pub_des_state_move_forwards_client.cc  pub_des_state_ps8_lin_steering_path_client.cc  (+3 more)
lab_1/: .~lock.writeup.odt#  CMakeLists.txt  package.xml  writeup.odt
lab_1/src/: stdr_commands.cc  stdr_open_loop_commander.cc
lab_2/: CMakeLists.txt  package.xml  writeup.odt
lab_2/src/: lidar_alarm.cc  lidar_parser.cc  movement_commands.cc  reactive_commander.cc
lab_2/test/: get_scan_params_unit.cc  safe_to_move_unit.cc
lab_3/: CMakeLists.txt  package.xml  writeup.odt
lab_3/src/: PathExecutor.cc  movement_commands.cc  movement_commands.cc~  path_client.cc  path_client.cc~  path_service.cc  path_service.cc~  waypoint_generator.cc
lab_4/: CMakeLists.txt  package.xml
lab_4/include/lab_4/: ActionServer.h  PathExecutor.h  lidar_parser.h  waypoint_generator.h
lab_4/src/: ActionServer.cc  PathExecutor.cc  action_client_node.cc  action_server_node.cc  lidar_alarm.cc  lidar_parser.cc  waypoint_generator.cc  waypoint_generator.cc~
lab_6/assignment_6/: CMakeLists.txt  README.md  package.xml
lab_6/assignment_6/launch/: mobot.launch  mobot2.launch  mobot_in_pen.launch  mobot_load_model_param_server.launch  mobot_startup.launch  mobot_startup_gmapping.launch  mobot_startup_open_loop.launch  mobot_w_arm.launch  mobot_w_arm_and_jnt_pub.launch  mobot_w_lidar.launch  mobot_w_lidar_and_camera.launch  mobot_w_lidar_and_rviz.launch
lab_6/assignment_6/src/: pub_des_state.cpp  pub_des_state.h  pub_des_state_main.cpp  pub_des_state_path_client.cpp  pub_des_state_path_client_3mx3m_sqr.cpp  pub_des_state_simple_main.cpp  traj_builder.cpp
lab_6/assignment_6/urdf/: mobot_w_arm.xacro  mobot_w_arm_and_jnt_pub.xacro  mobot_w_imu.xacro  mobot_w_lidar_and_camera.xacro  mobot_w_lidar_and_kinect.xacro
lab_8/: CMakeLists.txt  package.xml  package.xml~
lab_8/src/: pub_des_state_ps8_path_client.cc
labs/lab_9/: .~lock.writeup.odt#  CMakeLists.txt  CMakeLists.txt~  README.md  package.xml  package.xml~  writeup.odt
localizers/: CMakeLists.txt  CMakeLists.txt~  README.md  package.xml
localizers/include/localizers/: odom_tf.h  odom_tf.h~
localizers/src/: localizer_node.cc  localizer_node.cc~  odom_tf_fncs_no_amcl.cc~  odom_tf_fncs_w_amcl.cc  odom_tf_fncs_w_amcl.cc~
math_utils/: CMakeLists.txt  package.xml
motion_controllers/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
motion_controllers/src/: lin_steering_wrt_odom.cc  lin_steering_wrt_odom.cc~  odom_tf_fncs_no_amcl.cc  odom_tf_fncs_no_amcl.cc~  odom_tf_fncs_w_amcl.cc  open_loop_controller.cc
object_detectors/kinect_model/: CMakeLists.txt  package.xml
object_detectors/pcl_object_finder/: CMakeLists.txt  CMakeLists.txt~  package.xml
object_manipulators/baxter_gripper_interface/: CMakeLists.txt  CMakeLists.txt~  package.xml
object_manipulators/object_manipulator/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
object_manipulators/zeta_object_grabber/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
planners/: CMakeLists.txt  package.xml  package.xml~
planners/include/planners/: constants.h  pub_des_state.h  pub_des_state.h~  trajectory_builder.h  trajectory_builder.h~  types.h~  utils.h
planners/src/: pub_des_state.cc  pub_des_state.cc~  traj_service_main.cc  trajectory_builder.cc  utils.cc
ps1/: writeup.odt
ps1/src/: stdr_commands.cc  stdr_open_loop_commander.cc
ps2/p2_aew61/: .~lock.writeup.odt#
ps2/src/: lidar_alarm.cc  lidar_parser.cc
ps3/: CMakeLists.txt  package.xml
ps3/src/: path_client.cc  path_service.cc
ps4/: CMakeLists.txt  package.xml
ps4/p4_aew61/: writeup.odt
ps4/src/: PathExecutor.cc  PathExecutor.cc~  action_client_node.cc  action_client_node.cc~  action_server_node.cc~  lidar_parser.cc
ps6/: CMakeLists.txt
ps6/src/: lidar_alarm.cc  lidar_parser.cc  pub_des_state.cc  pub_des_state_path_client.cpp  pub_des_state_ps6_path_client.cpp  traj_service_main.cc  trajectory_builder.cc  utils.cc
ps6/srv/: ps6Path.srv
ps7/: CMakeLists.txt  package.xml
ps7/mobot_pub_des_state/src/: pub_des_state_main.cpp  pub_des_state_path_client.cpp
ps7/src/: pub_des_state_ps7_path_client.cc
ps8/: CMakeLists.txt~  package.xml
ps8/src/: pub_des_state_ps8_path_client.cc~
utils/: CMakeLists.txt  package.xml
utils/include/utils/: math_utils.h  message_utils.h
zeta_planners/: CMakeLists.txt  CMakeLists.txt~  package.xml
zeta_planners/src/: lidar_alarm.cc  pub_des_state.cc  traj_service_main.cc  trajectory_builder.cc  utils.cc
(+71 files in other folders)
